# Turing_deploy

./: .gitignore  Cargo.toml  Dockerfile  README.md  WEBSOCKETS.md  alex.md  classes.drawio  classes_duke.drawio  docker-compose.yml  dockerinit.js  endpoints.md  index.html  login.html  mono_crash.0.0.json  mono_crash.a56976f50.0.json  package-lock.json  package.json  register.html  setup.iss
APIrest/: go.mod  go.sum  server.go
APIrest/controller/: login-controller.go
APIrest/entity/: player.go
APIrest/middlewares/: basic-auth.go  logger.go
APIrest/utils/: validators.go
Assets/: Main.cs  MainScene.unity.unity  Tutorial.cs
Assets/Elements/: CameraScript.cs
Assets/Player/: Capsule.prefab  Movement.cs  Player.prefab  RemoteManager.cs
Assets/Scenes/: Home Sceene.unity  Login Scene.unity  Register Scene.unity  SampleScene.unity  TutorialScene.unity
Assets/Scripts/: Alert.cs  BackHome.cs  GameSession.cs  LoginHandler.cs  LogoutHandler.cs  OpenLogin.cs  RegisterHandler.cs  ServerResponse.cs
AuthSystem/: go.mod  go.sum  main.go
AuthSystem/controllers/: authController.go
AuthSystem/database/: connection.go
AuthSystem/models/: user.go
AuthSystem/routes/: routes.go
BackenWebV2/: go.mod  go.sum
BackenWebV2/api/: player_queries.go  player_search.go  player_search_handler.go  routes.go  services.go  user_service.go  users_handler.go
BackendWeb/: ormconfig.json  package-lock.json  package.json  tsconfig.json
BackendWeb/src/: client.ts  index.ts
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
alaturing_db/: go.mod  go.sum
alaturing_db/database/: mysql_client.go
alaturing_db/logs/: logs.go
apituringserver/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  server.go
apituringserver/cmd/: main.go
apituringserver/config/: database-config.go
apituringserver/controller/: admin.go  (+2 more)
css/: style.css
demo/: .gitignore  Cargo.toml
demo/src/: connection.rs  local.rs  main.rs  remote.rs  session.rs  timeout.rs
game/: package.json
golangserver/: docker-compose.yaml  go.mod  go.sum  main.go
js/: script.js  turing.js
rust/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  endpoints.md
rust/lib/slg/: .gitignore  Cargo.toml  README.md
rust/lib/slg/exec/src/: main.rs
rust/lib/slg/slg_proc/: Cargo.toml
rust/lib/slg/slg_proc/src/: lib.rs
rust/lib/slg/src/: lib.rs  traits.rs  uniform.rs
rust/lib/slg/src/generics/: color.rs  element.rs  mod.rs  scene.rs
rust/lib/slg/src/renderer/opengl/: instance.rs  renderer.rs  shader.rs  uniform.rs
rust/lib/slg/tests/: test.rs
rust/lib/turing_proc/: Cargo.toml
rust/lib/turing_proc/src/: lib.rs  maybee.rs
rust/src/: api.rs  consts.rs  db.rs  macros.rs  main.rs  tests.rs
rust/src/api/: game.rs  middleware.rs  mod.rs  route.rs  ws.rs
rust/src/db/: cache.rs  filter.rs  find.rs  find_many.rs  mod.rs
rust/src/elements/: body.rs  mod.rs  planet.rs  star.rs  system.rs
rust/src/elements/factory/: system.rs
rust/src/elements/player/: inventory.rs  mod.rs  stats.rs  web.rs
rust/src/elements/player/resource/: mod.rs  types.rs
rust/src/utils/: color.rs  durationx.rs  logger.rs  math.rs  mod.rs  randx.rs  seq_await.rs  serdex.rs  streamx.rs
rust/tests/: main.rs
rust/wsclient/: Cargo.toml
rust/wsclient/src/: main.rs
sistema_registro_juego/: app.js  env.txt  package-lock.json  package.json  scriptDB.txt
src/: TuringProject.dpr  TuringProject.dproj  TuringProject.res  TuringUnit.fmx  TuringUnit.pas  macros.rs  main.rs
test/: CoordinateTest.java  CordicTest.java  FactoryTest.java  FixedTest.java  KerrTest.java  MathTest.java  MatrixTest.java  MetricTest.java  NoiseTest.java  PaintedWindow.java  SchwrzTest.java  SystemTest.java  TransformTest.java  VectorTest.java
utils/: periodic_table.json  periodic_table.py
web/: game.html  package-lock.json  package.json
web_old/: index.html  register.html
(+319 files in other folders)
