[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["fs", "rt-multi-thread"] }
futures = "0.3"
dotenv = "0.15.0"
actix-web = { version = "4.0.0-beta.10" }
actix = "0.12"
actix-web-actors = { path = "./lib/actix-web/actix-web-actors" }
rand = { version = "0.8.4", features = ["serde1"] }
#rayon = "1.5.0"
llml = { version = "0.2.3", features = ["llml_serde", "llml_rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
mongodb = "2.1.0"
async_once = "0.2.6"
lazy_static = "1.4.0"
bson = { verison = "2.1.0", features = ["serde_with"] }
strum = { version = "0.24.0", features = ["derive"] }
randerive = "1.2.0"
jsonwebtoken = "8"
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1"
turing_proc = { path = "./lib/turing_proc" }
#slg = { path = "./lib/slg" }
regex = "1"
xstd = { version = "0.2.0", features = ["stream"] }