[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
websocket = "0.26"
slg = { path = "../lib/slg" }
llml = { version = "0", features = ["llml_serde"] }
bson = "2"
