[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
llml = { version = "0.2.2", features = ["llml_serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"