[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.16"
futures = "0.3"
dotenv = "0.15.0"
actix-web = { version = "4.0.0-beta.10" }
rand = "0.8.4"
rayon = "1.5.1"
llml = { version = "0.2.3", features = ["llml_serde", "llml_rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
mongodb = "2.1.0"
async_once = "0.2.6"
lazy_static = "1.4.0"
bson = { verison = "2.1.0", features = ["serde_with"] }
strum = { version = "0.23.0", features = ["derive"] }
randerive = "1.2.0"
jsonwebtoken = "7.2"
chrono = { version = "0.4.19", features = ["serde"] }
turing_proc = { path = "./lib/turing_proc" }
slg = { path = "./lib/slg" }